# satorb

./: Brdc.cpp  CMakeLists.txt  Lsq.cpp  Srif.cpp  VecMat.cpp  VecMat.h  main.cpp
datafile/: test_eph
include/: Algorithm.h  Const.h  GNSS.h  VecMat.h
outputfile/: EPH.txt  GPSResult_Mean.txt  GPSResult_Mean_Weight.txt  GPSResult_Mean_Weight_detection.txt  GPSResult_Mean_without_weight_with_detection.txt  GPSResult_Srif.txt  GPSResult_XYZ.txt  GPSResult_XYZ_Weight.txt  GPSResult_XYZ_Weight_detection.txt  GPSResult_XYZ_without_weight_with_detection.txt  Gross_Obs.txt
src/: Algorithm.cpp  CMakeLists.txt  GNSS.cpp  VecMat.cpp
